remove position absolute to avoid topmost select opening over the the select below it, essentially covering the options of the select below

--- a/trivia/src/components/form/components/select/Select.scss
+++ b/trivia/src/components/form/components/select/Select.scss
@@ -39,7 +39,7 @@
     width: 350px;
     visibility: hidden;
     background-color: white;
-    position: absolute;
+    // position: absolute;
     overflow-y: scroll;
     transition: height .2s, visibility .2s;
 
